- Don't need ${project.home} ref any more - Add forrest.echo property
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7463 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/fresh-site/forrest.properties
+++ b/src/resources/fresh-site/forrest.properties
@@ -8,9 +8,12 @@
 # Specifies name of Forrest skin to use
 #project.skin=forrest-site
 
+# Echo Forrest settings when Forrest is run?
+#forrest.echo=true
+
 # Properties that must be set to override the default locations
-#project.status=${project.home}/status.xml
-#project.content-dir=${project.home}/src/documentation
+#project.status=status.xml
+#project.content-dir=src/documentation
 #project.conf-dir=${project.content-dir}/conf
 #project.sitemap=${project.content-dir}/sitemap.xmap
 #project.xdocs-dir=${project.content-dir}/content/xdocs
