--- a/src/resources/fresh-site/forrest.properties
+++ b/src/resources/fresh-site/forrest.properties
@@ -5,6 +5,9 @@
 # Prints out a summary of Forrest settings for this project
 #forrest.echo=true 
 
+# Project name (used to name .war file)
+#project.name=my-project
+
 # Specifies name of Forrest skin to use
 #project.skin=forrest-site
 
