--- a/build.xml
+++ b/build.xml
@@ -4,7 +4,7 @@
 <!--<!DOCTYPE project SYSTEM "./tools/antipede/build.dtd" >-->
 <!DOCTYPE project [
   <!-- antipede -->
-  <!ENTITY import-antipede  SYSTEM "./tools/antipede/build.xtarget">
+  <!ENTITY import-antipede  SYSTEM "file:./tools/antipede/build.xtarget">
 
 ]>
 <project default="interactive" basedir="." name="project build file">
