Mention validate.failonerror flag in template site
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7517 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/fresh-site/forrest.properties
+++ b/src/resources/fresh-site/forrest.properties
@@ -14,6 +14,9 @@
 # Echo Forrest settings when Forrest is run?
 #forrest.echo=true
 
+# Should Forrest stop when an XML file is invalid?
+#forrest.validate.failonerror=true
+
 # Properties that must be set to override the default locations
 #project.status=status.xml
 #project.content-dir=src/documentation
