List properties which specify which files to validate
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7525 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/fresh-site/forrest.properties
+++ b/src/resources/fresh-site/forrest.properties
@@ -16,6 +16,10 @@
 
 # Should Forrest stop when an XML file is invalid?
 #forrest.validate.failonerror=true
+# Comma-separated list of path patterns to validate
+#forrest.validate.includes=*.x*
+# Comma-separated list of path patterns to not validate
+#forrest.validate.excludes=
 
 # Properties that must be set to override the default locations
 #project.status=status.xml
