Indicate that alternative skins are available.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7543 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/fresh-site/forrest.properties
+++ b/src/resources/fresh-site/forrest.properties
@@ -9,6 +9,7 @@
 #project.name=my-project
 
 # Specifies name of Forrest skin to use
+#project.skin=basic
 #project.skin=forrest-site
 
 # Should Forrest stop when an XML file is invalid?
