Properly exclude bin/
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7581 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -213,7 +213,7 @@
 	<mkdir dir="${dist-shbat.dir}/forrestbot" />
 	<copy todir="${dist-shbat.dir}/forrestbot">
     <fileset dir="src/resources/forrestbot">
-      <exclude name="bin"/>
+      <exclude name="bin/**"/>
     </fileset>
   </copy>
   <copy todir="${dist-shbat.dir}/bin">
