<action dev="NKB" type="add" context="edit">      Included Jetty in the shbat distro.      type "forrest run" to have the ./build/webapp dir contents be run      in a local web server, starting from http://localhost:8888/index.html .     </action>
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7586 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -150,6 +150,7 @@
       <fileset dir="${resource.dir}/conf">
         <include name="sitemap.xmap"/>
         <include name="skinconf.xml"/>
+        <include name="jettyconf.xml"/>
       </fileset>
     </copy>
 
@@ -203,6 +204,11 @@
 		<fileset dir="lib/endorsed" />
     </copy>
 
+	<mkdir dir="${dist-shbat.dir}/lib/optional" />
+	<copy todir="${dist-shbat.dir}/lib/optional">
+		<fileset dir="lib/optional" />
+    </copy>
+    
 	<!-- Copy Ant jars, so the shbat distribution is self-contained -->
 	<mkdir dir="${dist-shbat.dir}/ant" />
 	<copy todir="${dist-shbat.dir}/ant">
