--- a/build.xml
+++ b/build.xml
@@ -158,6 +158,11 @@
     <copy todir="${bare-context.dir}/library/" >
       <fileset dir="${resource.dir}/library" />
     </copy>
+    
+    <!-- Copy editor -->
+    <copy todir="${bare-context.dir}/" >
+      <fileset dir="${resource.dir}/editor" />
+    </copy>    
 
     <!-- Copy skins -->
     <copy todir="${bare-context.dir}/skins/" >
