Document forrest.validate.failonerror
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7616 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/fresh-site/forrest.properties
+++ b/src/resources/fresh-site/forrest.properties
@@ -50,6 +50,7 @@
 # *.includes=(pattern)         Comma-separated list of path patterns to validate
 # *.excludes=(pattern)         Comma-separated list of path patterns to not validate
 
+#forrest.validate.xdocs.failonerror=true
 #forrest.validate.includes=**/*
 #forrest.validate.excludes=
 #
