--- a/src/resources/fresh-site/forrest.properties
+++ b/src/resources/fresh-site/forrest.properties
@@ -9,8 +9,8 @@
 #project.name=my-project
 
 # Specifies name of Forrest skin to use
-#project.skin=basic
 #project.skin=forrest-site
+#project.skin=avalon-tigris
 
 
 ##############
