Adapt sitemap authentication to run on any project's sitemap
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7636 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/fresh-site/forrest.properties
+++ b/src/resources/fresh-site/forrest.properties
@@ -40,6 +40,7 @@
 #forrest.validate=true
 #forrest.validate.xdocs=${forrest.validate}
 #forrest.validate.skinconf=${forrest.validate}
+#forrest.validate.sitemap=${forrest.validate}
 #forrest.validate.stylesheets=${forrest.validate}
 #forrest.validate.skins=${forrest.validate}
 #forrest.validate.skins.stylesheets=${forrest.validate.skins}
@@ -62,6 +63,10 @@
 #forrest.validate.skinconf.includes=${skinconf-file}
 #forrest.validate.skinconf.excludes=
 #forrest.validate.skinconf.failonerror=${forrest.validate.failonerror}
+#
+#forrest.validate.sitemap.includes=${sitemap-file}
+#forrest.validate.sitemap.excludes=
+#forrest.validate.sitemap.failonerror=${forrest.validate.failonerror}
 #
 #forrest.validate.skinconf.includes=${skinconf-file}
 #forrest.validate.skinconf.excludes=
