Now also validate sitemap for the "editor".
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7640 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -199,15 +199,13 @@
     <echo message="validating **/sitemap.xmap ..."/>
     <jing rngfile="./src/resources/schema/relaxng/sitemap-v05.rng">
       <fileset dir="./src/resources" includes="**/sitemap.xmap"/>
-<!-- FIXME: Excluded for the moment because it breaks.
       <fileset dir="./src/resources/editor" includes="editor.xmap"/>
--->
     </jing>
     <!-- book.xml -->
 <!-- FIXME: Need Norm Walsh catalog entity resolver or Jeff's DoctypeChanger.
     <echo message="validating **/book.xml ..."/>
     <jing rngfile="./src/resources/schema/relaxng/book-v01.rng">
-      <fileset dir="./src/resources" includes="**/book.xml"/>
+      <fileset dir="./src" includes="**/book.xml"/>
     </jing>
 -->
   </target>
