Copy licenses into binary distribution
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7656 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -233,6 +233,11 @@
       <fileset dir="./src/resources/forrest-shbat" />
   </copy>
 
+    <!-- copy licenses -->
+    <copy todir="${dist-shbat.dir}/legal">
+      <fileset dir="./legal" />
+    </copy>
+
     <!-- copy the fresh-site.zip to clone from -->
     <copy todir="${dist-shbat.dir}" file="${fresh-site.zip}" />
     
