Fixed bug where validation of xdocs was not descending into sub-directories.
git-svn-id: https://svn.apache.org/repos/asf/xml/forrest/trunk@7676 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/resources/fresh-site/forrest.properties
+++ b/src/resources/fresh-site/forrest.properties
@@ -57,7 +57,7 @@
 #
 #forrest.validate.xdocs.failonerror=${forrest.validate.failonerror}
 #
-#forrest.validate.xdocs.includes=*.x*
+#forrest.validate.xdocs.includes=**/*.x*
 #forrest.validate.xdocs.excludes=
 #
 #forrest.validate.skinconf.includes=${skinconf-file}
